<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/kamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kamera"
            android:background="#EB6896"
            android:fontFamily="casual"
            android:textStyle="bold"/>

        <Button
            android:layout_marginLeft="10dp"
            android:id="@+id/ses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ses"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:background="#C36894"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/harita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/harita"
            android:background="#836890"
            android:fontFamily="casual"
            android:textStyle="bold"/>

        <Button
            android:layout_marginLeft="10dp"
            android:id="@+id/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/web"
            android:background="#46698D"
            android:fontFamily="casual"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sms"
            android:background="#0F6A8B"
            android:fontFamily="casual"
            android:textStyle="bold"/>

        <Button
            android:layout_marginLeft="10dp"
            android:id="@+id/arama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/arama"
            android:background="#0F948B"
            android:fontFamily="casual"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>