<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SmsActivity"
    android:orientation="vertical"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_gravity="center"
    android:gravity="center">

    <EditText
        android:id="@+id/mesaj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25dp"
        android:hint="@string/mesajHint"
        android:inputType="textMultiLine"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/telNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:inputType="number"
        android:hint="@string/telHint"/>

    <Button
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="20dp"
        android:id="@+id/gonder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mesajGonder"
        android:background="@color/colorPrimaryDark"/>

</LinearLayout>